# Benchtrack

./: .gitignore  LICENSE.md  README.md  TME_RA_evolution_2021.ipynb  run.py  setup.cfg  setup.py  target.json  target1.py  target2.py  test1.py
ConfigFichier/: ConfigFichier.csv  output.csv
PGM/: output.csv
code/: MANIFEST.in  MyFlags.py  Rruning.py  bench2site.py  benchTrack.py  generateRst.py  main.py  resultsBench.py  setup.py  structureBench.py  target.py  task.py  testBenchTrack.py  theme.py  tools.py
code/BenchTrack/: generateRst.py  structureBench.py  task.py  theme.py  tools.py
code/bench2html/: bench2content.py
code/benchTrack/: structureBench.py  task.py  tools.py
code/site/: pelicanconf.py
code/src/: benchTrack.py  testSite.py
code/test/: testBenchTrack.py
doc/: retroplanning.txt
doc/source/: bench2site.rst  conf.py  structureBench.rst  testBenchTrack.rst
infrastructures/ConfigFichier/: ConfigFichier.csv  README.rst  output.csv  output2021-05-07.csv
infrastructures/PGM/: output.csv  output2021-05-07.csv  output2021-05-10.csv
infrastructures/PGMbench/: output2021-05-10.csv
site/: pelicanconf.py
site_ConfigFichier/output/: archives.html  authors.html  categories.html  charger_employe-error.html  charger_employe_coordonnees-error.html  charger_employe_coordonneesini_demo.html  charger_employe_coordonneesjson_demo.html  charger_employe_coordonneesxml_demo.html  charger_employeini_demo.html  charger_employejson_demo.html  charger_employer_demo.html  charger_employexml_demo.html  index.html  tags.html  (+4 more)
src/: benchTrack.py  setup.py
(+154 files in other folders)
