[metadata]
name = BenchTrack
version = 0.0.1
author = BHY
description = A python framework for generating a benchmark, by running specific tasks on specific targets.
long_description = file: README.md
#long_description_content_type = text/markdown
url = https://github.com/AlexisLenoir/Benchtrack
classifiers =
    Programming Language :: Python :: 3
    #License :: OSI Approved :: MIT License
    Operating System :: Windows,Linux,MacOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src